# rust-sample

./: .env  Cargo.toml  README.md
auth/: Cargo.toml
auth/src/: lib.rs  main.rs
db/: Cargo.toml
db/migrations/: 001_privacy.sql  002_users.sql  003_images.sql  003_orgs.sql  004_agreements.sql  005_places.sql  006_producers.sql  007_wines.sql  008_acquisitions.sql  009_libraries.sql  010_tastings.sql  011_drinks.sql  012_posts.sql  013_collections.sql  014_comments.sql  015_contacts.sql  016_follows.sql  017_wine_stats.sql
db/src/: error.rs  json.rs  lib.rs  macros.rs  pool.rs  validation.rs
db/src/models/: agreement.rs  enums.rs  image.rs  mod.rs  org.rs  place.rs  prelude.rs  producer.rs  user.rs  wine.rs
diesel-postgis-geometry/: Cargo.toml
diesel-postgis-geometry/src/: lib.rs  sql_types.rs  types.rs
graphql/: Cargo.toml
graphql/src/: context.rs  image.rs  lib.rs  main.rs  mutation.rs  query.rs  user.rs
server/: Cargo.toml  config.json
server/src/: config.rs  lib.rs  main.rs  network.rs  util.rs
server/src/service/: files.rs  graphiql.rs  graphql.rs  juniper_actix.rs  manager.rs  mod.rs  upload.rs  www.rs
