[package]
name = "diesel-postgis-geometry"
version = "0.1.0"
authors = ["jz-00 <jz-00@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
postgis = "0.7.0"
serde = { version = "1.0", features = ["derive"], optional = true }
