[package]
name = "server"
version = "0.1.0"
authors = ["jz-00 <jz-00@users.noreply.github.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
auth = { path = "../auth" }
graphql = { path = "../graphql" }

anyhow = "1.0"
thiserror = "1"
dotenv = "0.15.0"
pretty_env_logger = "0.4"
log = "0.4"
regex = "1"
lazy_static = "1.4"
get_if_addrs = "0.5"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "blocking", "rt-core", "time"] }
rustls = "0.16"
actix-web = { version ="2.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.2"
actix-rt = "1.0"
actix-files = "0.2"
actix-service = "1.0"
actix-http = "1.0"
mime = "0.3"
image = "0.23"
futures = { version = "0.3.1", features = ["compat"] }
juniper = { git = "https://github.com/graphql-rust/juniper" }
uuid = { version = "0.8", features = ["serde", "v4"] }
